# Generative-Art-Experiments

./: .gitmodules  Cargo.toml  README.md  build.rs
carbon/: Cargo.toml
carbon/src/: lib.rs
carbon/src/camera/: mod.rs
carbon/src/context/: mod.rs
carbon/src/egui/: integration.rs  mod.rs  painter.rs
carbon/src/egui_integration/: integration.rs  painter.rs
carbon/src/egui_integration/shaders/: egui.frag  egui.vert
carbon/src/egui_integration/shaders/spv/: egui.frag.spv  egui.vert.spv
carbon/src/imgui/: mod.rs
carbon/src/input/: keyboard.rs  mod.rs  mouse.rs
carbon/src/scene/: compiled_scene.rs  gltf_scene.rs  mod.rs
carbon/src/vertex/: mod.rs
src/: main.rs
src/shaders/: triangle.frag  triangle.vert  triangle_vert.spv
src/shaders/spv/: triangle.frag.spv  triangle.vert.spv
