[package]
name = "generative-art-experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26"
easy-ash = { path =  "./easy-ash" }

[build-dependencies]
rust-shader-tools = { git = "https://github.com/ArthurKValladares/Rust-Shader-Tools" }